# Polyhedron

./: .gitignore  README.md
cmake/: thirdparty.cmake
config/glsl/: misc.cfg
media/map/: door.ogz  ta.ogz  ta2.ogz  test2.json  test2.ogz
media/model/actors/bones/: md5.cfg  model.md5mesh
media/model/actors/player/: iqm.cfg
media/model/lex/: iqm.cfg  simple_lex.iqm
media/model/lexmd5/: lex.md5mesh  lex_run.md5anim  md5.cfg
media/model/world/door_2/: iqm.cfg
src/: CMakeLists.txt  CMakeSettings.json
src/binding/: index.py
src/binding/autobind/: compileflags.py  parsecpp.py
src/binding/autobind/cppmodel/: CxxNode.py
src/binding/autobind/generator/: JsonSerializer.py
src/engine/: Camera.cpp  Camera.h  animmodel.cpp  animmodel.h  bih.cpp  bih.h  blend.cpp  command.cpp  console.cpp  console.h  dynlight.cpp  engine.h  explosion.h  grass.cpp  hitzone.h  iqm.h  lensflare.h  light.cpp  lightning.h  log.cpp  log.h  main.cpp  material.cpp  md2.h  md3.h  md5.h  menus.cpp  model.h  movie.cpp  mpr.h  normal.cpp  obj.h  octa.cpp  octa.h  octaedit.cpp  octarender.cpp  physics.cpp  physics.h  pvs.cpp  ragdoll.cpp  (+32 more)
src/engine/editor/: ui.cpp  ui.h
src/engine/engine/: font.cpp  font.h
src/engine/main/: Application.cpp  Application.h  Compatibility.cpp  Compatibility.h  GLContext.cpp  GLContext.h  Input.cpp  Input.h  KeyControl.cpp  KeyControl.h  Renderer.cpp  Renderer.h
src/engine/nui/: nui.cpp  nui.h
src/engine/state/: MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
src/ext/constexpr/: cx_map.h
src/ext/enet/: CMakeLists.txt
src/ext/imgui/: imconfig.h  imgui.h
src/ext/nuklear/: nuklear.h  nuklear_polyhedron.cpp
src/game/: commands.cpp  entities.cpp  entities.h  game.cpp  game.h  render.cpp
src/game/entities/: DoorEntity.cpp  DoorEntity.h  LightEntity.cpp  LightEntity.h  ModelEntity.cpp  ModelEntity.h  MonsterEntity.cpp  MonsterEntity.h  PickupEntity.cpp  PickupEntity.h  PlayerSpawnEntity.cpp  PlayerSpawnEntity.h  SkeletalEntity.cpp  SkeletalEntity.h  SoundEntity.cpp  SoundEntity.h  dynamiclight.cpp  dynamiclight.h
src/game/state/: FpsGameState.cpp  FpsGameState.h
src/server/: master.cpp
src/shared/: Easing.cpp  command.h  crypto.cpp  cube.h  cube2font.c  ents.h  geom.cpp  glemu.cpp  glemu.h  iengine.h  igame.h  stream.cpp  stream.h  tools.cpp  tools.h  zip.cpp  zip.h
src/shared/architecture/: Attribute.cpp  Attribute.h  Factory.cpp  Factory.h
src/shared/entities/: DecalEntity.cpp  DecalEntity.h  DynamicEntity.cpp  DynamicEntity.h  Entity.cpp  Entity.h  EntityEditorMenu.cpp  EntityEditorMenu.h  EntityFactory.cpp  EntityFactory.h  EnvMapEntity.cpp  EnvMapEntity.h  MovableEntity.cpp  MovableEntity.h  animinfo.h
src/shared/event/: EntityEvent.cpp  EntityEvent.h  EntityEventType.h  EntitySignalHandler.h  Event.cpp  Event.h  EventDetail.cpp  EventDetail.h  EventHandlerDetail.cpp  EventHandlerDetail.h  EventType.h  GameEvent.cpp  GameEvent.h  GameEventType.h  GameSignalHandler.cpp  GameSignalHandler.h  StateEvent.cpp  StateEventType.h  StateSignalHandler.cpp  StateSignalHandler.h
src/shared/geom/: dualquat.h  dvec4.h  hvec.h  hvec2.h  ivec.cpp  ivec.h  ivec2.h  ivec4.h  matrix2.h  matrix3.cpp  plane.h  quat.cpp  svec.cpp  svec.h  triangle.h  vec.h  vec4.h
src/shared/python/: PythonPipeIO.h  PythonScript.h
src/shared/tools/: databuf.h  hash.h  loop.h  macros.h  queue.h  sort.h  vector.h  vector_util.cpp  vector_util.h
